--- a/index.html
+++ b/index.html
@@ -4,8 +4,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Asif Estiak | Web Developer</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
 </head>
 <body>
-  
+  <!-- If you want to see the best result, your browser resolution should be more than 600 pixels. -->
+
+  <!-- Header Section -->
+  <section class="header-section">
+    <ul>
+      <li>About</li>
+      <li>Work</li>
+      <li>Portfolio</li>
+      <li>Contact</li>
+    </ul>
+  </section>
+  <!-- /Header Section -->
+
+  <!-- First Section -->
+  <section class="first-section common-section">
+    <div class="half-width text-area">
+      <h1>HELLO, I'M<br><span class="highlighter">ASIF ESTIAK</span></h1>
+      <p>A full stack allaround designer that placerat in massa consectetur</p>
+      <a class="button" href="" target="_blank">Hire Me</a>
+    </div>
+    <div class="half-width">
+      <img id="image-1" src="images/asif-1.jpg" alt="Asif Estiak">
+    </div>
+  </section>
+  <!-- /First Section -->
+
+  <!-- Secound Section -->
+  <section class="secound-section common-section">
+    <div class="half-width">
+      <img id="image-2" src="images/asif-2.jpg" alt="Asif Estiak">
+    </div>
+    <div class="half-width text-area">
+      <h2>ABOUT</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur optio molestias expedita earum blanditiis! Harum tenetur corporis vero dolorum, exercitationem id quo enim, laboriosam cum quisquam maxime fugit, est culpa consectetur fuga. Quaerat, asperiores.</p>
+      <a class="button" href="" target="_blank"><i class="fas fa-cloud-download-alt"></i>&nbsp; Download CV</a>
+    </div>
+  </section>
+  <!-- /Secound Section -->
+
+  <!-- Third Section -->
+  <section class="third-section common-section">
+    <h2 class="text-center"><span class="highlighter">LASTET</span> WORKING PROJECT</h2>
+    <div class="first-box common-box">
+      <img src="images/image-1.png" alt="First Box Image">
+      <h4>Power-x-gym (gym website)</h4>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+    <div class="secound-box common-box">
+      <img src="images/image-2.png" alt="Secound Box Image">
+      <h4>Creative Agency</h4>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+    <div class="third-box common-box">
+      <img src="images/image-3.png" alt="Third Box Image">
+      <h4>Hard Rock Music</h4>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+  </section>
+  <!-- /Third Section -->
+
+  <!-- Contact US Section -->
+  <section class="contact-section">
+      <img src="images/footer-bar.png" alt="Contact US Image">
+      <h2 class="bar-content-1">Work Inquiry</h2>
+      <a class="button bar-content-2" href="">Let's Chat</a>
+  </section>
+  <!-- /Contact US Section -->
+
+  <!-- Footer Section -->
+  <footer class="text-center">
+    <p>Stay connected</p>
+    <a href="mailto:hello@design.com"><h2>hello@design.com</h2></a>
+    <img src="icons/dribbble.png" alt="Dribbble Icon">
+    <img src="icons/behance.png" alt="Dribbble Icon">
+    <img src="icons/instagram.png" alt="Dribbble Icon">
+  </footer>
+  <!-- /Footer Section -->
 </body>
 </html>
