links are updated

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <!-- Header Section -->
   <section class="header-section">
     <ul>
-      <li>About</li>
-      <li>Work</li>
-      <li>Portfolio</li>
-      <li>Contact</li>
+      <li><a href="about">About</a></li>
+      <li><a href="work">Work</a></li>
+      <li><a href="portfolio">Portfolio</a></li>
+      <li><a href="contact">Contact</a></li>
     </ul>
   </section>
   <!-- /Header Section -->
@@ -26,7 +26,7 @@
     <div class="half-width text-area">
       <h1>HELLO, I'M<br><span class="highlighter">ASIF ESTIAK</span></h1>
       <p>A full stack allaround designer that placerat in massa consectetur</p>
-      <a class="button" href="" target="_blank">Hire Me</a>
+      <a class="button" href="contact">Hire Me</a>
     </div>
     <div class="half-width">
       <img id="image-1" src="images/asif-1.jpg" alt="Asif Estiak">
@@ -42,7 +42,7 @@
     <div class="half-width text-area">
       <h2>ABOUT</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur optio molestias expedita earum blanditiis! Harum tenetur corporis vero dolorum, exercitationem id quo enim, laboriosam cum quisquam maxime fugit, est culpa consectetur fuga. Quaerat, asperiores.</p>
-      <a class="button" href="" target="_blank"><i class="fas fa-cloud-download-alt"></i>&nbsp; Download CV</a>
+      <a class="button" href="my-cv" target="_blank"><i class="fas fa-cloud-download-alt"></i>&nbsp; Download CV</a>
     </div>
   </section>
   <!-- /Secound Section -->
@@ -52,17 +52,17 @@
     <h2 class="text-center"><span class="highlighter">LASTET</span> WORKING PROJECT</h2>
     <div class="first-box common-box">
       <img src="images/image-1.png" alt="First Box Image">
-      <h4>Power-x-gym (gym website)</h4>
+      <a href="gym-website"><h4>Power-x-gym (gym website)</h4></a>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
     <div class="secound-box common-box">
       <img src="images/image-2.png" alt="Secound Box Image">
-      <h4>Creative Agency</h4>
+      <a href="creative-agency"><h4>Creative Agency</h4></a>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
     <div class="third-box common-box">
       <img src="images/image-3.png" alt="Third Box Image">
-      <h4>Hard Rock Music</h4>
+      <a href="hard-rock-music"><h4>Hard Rock Music</h4></a>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
   </section>
@@ -72,7 +72,7 @@
   <section class="contact-section">
       <img src="images/footer-bar.png" alt="Contact US Image">
       <h2 class="bar-content-1">Work Inquiry</h2>
-      <a class="button bar-content-2" href="">Let's Chat</a>
+      <a class="button bar-content-2" href="contact">Let's Chat</a>
   </section>
   <!-- /Contact US Section -->
 
@@ -80,9 +80,9 @@
   <footer class="text-center">
     <p>Stay connected</p>
     <a href="mailto:hello@design.com"><h2>hello@design.com</h2></a>
-    <img src="icons/dribbble.png" alt="Dribbble Icon">
-    <img src="icons/behance.png" alt="Dribbble Icon">
-    <img src="icons/instagram.png" alt="Dribbble Icon">
+    <a href="https://dribbble.com/"><img src="icons/dribbble.png" alt="Dribbble Icon"></a>
+    <a href="https://www.behance.net/"><img src="icons/behance.png" alt="Dribbble Icon"></a>
+    <a href="https://www.instagram.com/"><img src="icons/instagram.png" alt="Dribbble Icon"></a>
   </footer>
   <!-- /Footer Section -->
 </body>
