--- a/index.html
+++ b/index.html
@@ -85,5 +85,7 @@
     <a href="https://www.instagram.com/"><img src="icons/instagram.png" alt="Dribbble Icon"></a>
   </footer>
   <!-- /Footer Section -->
+
+  <!-- If you want to see the best result, your browser resolution should be more than 600 pixels. -->
 </body>
 </html>
