added my own part

--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
   </section>
   <!-- /Third Section -->
 
+  <!-- Fourth Section -->
+  <section class="fourth-section">
+    <h2 class="text-center">Experiences</h2>
+    <h3>HTML (90%)</h3>
+    <div class="html">
+      <div class="ninty"></div>
+    </div>
+    <h3>CSS (95%)</h3>
+    <div class="css">
+      <div class="ninty-five"></div>
+    </div>
+  </section>
+  <!-- /Fourth Section -->
+
   <!-- Contact US Section -->
   <section class="contact-section">
       <img src="images/footer-bar.png" alt="Contact US Image">
